# markdown-table-generator

./: Cargo.toml  Dockerfile  README.md  action.yaml
.github/workflows/: release-on-tag.yaml
src/: lib.rs  main.rs  models.rs
